<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="empty_string"></string>string>
    <string name="button_toast_activity">Toast Activity</string>
    <string name="button_toast_toast">Toast</string>
    <string name="button_toast_count">Count</string>
    <string name="default_toast_count">0</string>
    <string name="toast_message">Hello Toast!</string>
    <string name="button_scroll_activity">Scroll Activity</string>
    <string name="scroll_article_title">Tremors (film)</string>
    <string name="scroll_article_subtitle">Plot</string>
    <string name="scroll_article_text">
        Valentine \"Val\" McKee and Earl Bassett are handymen working in Perfection, Nevada, an isolated ex-mining settlement in the high desert east of the Sierra Nevada mountains. They eventually get tired of their jobs and leave for Bixby, the nearest town. As they leave, they discover the dead body of another resident, Edgar Deems, perched atop an electrical tower, still grasping the tower\'s crossbeams and his .30-30 Winchester rifle. Jim Wallace, the town\'s doctor, determines that Edgar died of dehydration, apparently afraid for some reason to climb down.\n
        Later on, an unknown creature kills shepherd \"Old Fred\" and his flock of sheep. After discovering his severed head buried in the sand, Val and Earl become convinced that a serial killer is on the loose; they head back to town to warn the other residents. Two construction workers ignore Val and Earl\'s warning and are killed by the same creature, causing a rock slide. Val and Earl try to get help, but find the phone lines are dead, and the only road out of town is completely blocked by the rock slide. Out of sight, a snake-like creature wraps itself around their truck\'s rear axle. The creature is however torn apart when Val stomps on the accelerator and drives away, where they find it later when they return to town.\n
        Val and Earl return to Perfection and borrow horses. They come upon Wallace and his wife\'s buried station wagon near their trailer, but the couple is missing (they were killed the previous night). As they press on, an enormous burrowing worm-like creature (later named a \"graboid\" by general store owner Walter Chang), suddenly erupts out of the ground, revealing the snake-like creature to be one of the worm creature\'s tentacled \"tongues\": thrown from their horses, the men flee with the monster following them in pursuit. The chase ends when the eyeless creature crashes through the concrete wall of an aqueduct, dying from the impact. Rhonda LeBeck, a graduate student conducting seismology tests in the area, stumbles onto the scene; she deduces from previous soundings that three other graboids are in the area. Rhonda, Val, and Earl become trapped overnight atop a cluster of boulders near one of the creatures, named Stumpy. Rhonda has a brainstorm and grabs one of several left-behind fence poles of a nearby fence; the three of them repeatedly pole vault to residual boulders to get to her truck, finally making their getaway.\n\n
        See more on: https://en.wikipedia.org/wiki/Tremors_(film)\n\n
    </string>
    <string name="add_comment">Add comment</string>
</resources>
